Fixed Alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
   font-size: 13px;
   letter-spacing: 0.5px;
   font-weight: 400;
-  margin: 16px;
+  margin-bottom: 16px;
 
   display: block;
 
@@ -46,7 +46,7 @@ mat-form-field {
 
 
 .new_item {
-  margin-bottom: 32px;
+  background-color: #f8f8ff;
   box-shadow:
     0px 2px 5.5px rgba(0, 0, 0, 0.028),
     0px 6.7px 18.5px rgba(0, 0, 0, 0.042),
@@ -95,8 +95,8 @@ mat-form-field {
   min-height: 1000px;
   max-width: 850px;
   margin: auto;
-  padding: 4px;
-  margin-top: 24px;
+  padding: 12px;
+  margin-top: 16px;
 }
 
 .text3 {
